Fix weird double scroll issue on large post pages.

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -1,13 +1,11 @@
 @import 'variables';
 
-html {
-  min-height: 100%;
+html, body {
+  height: 100%;
   width: 100%;
 }
 
 body {
-  min-height: 100%;
-  width: 100%;
   display: flex;
   flex-direction: column;
 }
